[gd_scene load_steps=2 format=3 uid="uid://b7l4kmo3i3ds8"]

[ext_resource type="Script" path="res://main.gd" id="1_4rw5x"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4rw5x")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -62.5
offset_right = 46.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="NewGamebutton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quitbutton")
text = "New Game"

[node name="Loadbutton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Quitbutton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../NewGamebutton")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/NewGamebutton" to="." method="_on_new_gamebutton_pressed"]
[connection signal="pressed" from="VBoxContainer/Loadbutton" to="." method="_on_loadbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/Quitbutton" to="." method="_on_quitbutton_pressed"]
